--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     // RxJava
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.android.billingclient:billing:dp-1'
+
 }
 
 task askForPasswords << {
